Fix spacing on some elements to match design

--- a/my-react-portfolio/src/components/ArticleCard/ArticleCard.css
+++ b/my-react-portfolio/src/components/ArticleCard/ArticleCard.css
@@ -45,6 +45,10 @@
   font-size: 1.125rem;
 }
 
+.article-card .button {
+  max-width: 100%;
+}
+
 /* Tablet */
 @media (min-width: 768px) and (max-width: 1023px) {
   .article-card {
