--- a/my-react-portfolio/src/sections/ArticleSection.css
+++ b/my-react-portfolio/src/sections/ArticleSection.css
@@ -23,6 +23,10 @@
     padding: 8rem 1.5rem;
     gap: 8rem;
   }
+
+  .tag.article-tag {
+    width: 8.875rem;
+  }
 }
 
 /* Desktop */
@@ -35,5 +39,9 @@
 
   .article-cards {
     gap: 4rem;
+  }
+
+  .tag.article-tag {
+    width: 8.875rem;
   }
 }
