--- a/my-react-portfolio/src/sections/ContactSection.css
+++ b/my-react-portfolio/src/sections/ContactSection.css
@@ -62,6 +62,7 @@
   .contact-info {
     width: 50%;
     align-items: center;
+    padding-left: 0;
   }
 
   .contact-info p {
@@ -78,6 +79,7 @@
   .contact-info {
     width: 60%;
     align-items: center;
+    padding-left: 0;
   }
 
   .contact-info p {
