--- a/my-react-portfolio/src/sections/ImageSection.css
+++ b/my-react-portfolio/src/sections/ImageSection.css
@@ -46,10 +46,6 @@
   transform: rotate(4.695deg);
 }
 
-.image-card:hover {
-  transform: scale(1.01);
-}
-
 /* Tablet Styling */
 @media (min-width: 768px) {
   .image-section {
