--- a/my-react-portfolio/src/sections/ProjectSection.css
+++ b/my-react-portfolio/src/sections/ProjectSection.css
@@ -34,4 +34,8 @@
   .project-cards {
     gap: 8rem;
   }
+
+  .card-info {
+    width: 36.25rem;
+  }
 }
