--- a/my-react-portfolio/src/sections/TechSection.css
+++ b/my-react-portfolio/src/sections/TechSection.css
@@ -1,11 +1,15 @@
 /* Default (Mobile) */
 .tech-section {
-  display: flex;
   padding: 4rem 1rem;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
   grid-column: 1 / -1;
+  display: flex;
+  justify-content: center;
+}
+
+.text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 /* Tablet */
@@ -15,7 +19,7 @@
   }
 
   .text-container {
-    width: 60%;
+    width: 50%;
   }
 }
 
